        robot
      (andrewmoise)
    - Add Galeon, Seamonkey, and Epiphany as specifically detected
      browsers (andrewmoise)
    - Some internal changes that make things simpler and faster
      (andrewmoise)
    - Remove the $check argument (e.g. $ua->beta('.45') to check
      whether the beta version is ".45") (andrewmoise)
    - Update and reorganize documentation (andrewmoise)

1.78 2015-03-17 22:43:27 America/Toronto
    - Reorganize documentation (andrewmoise)
    - Make java a robot with the other libs and tools (andrewmoise)
    - Add a "lib" test to detect libs and tools (andrewmoise)
    - Add AppleCoreMedia (andrewmoise)
    - Make Blackberry stop setting Safari tests (andrewmoise)
    - Make Android stop setting Linux tests (andrewmoise)
    - Implement much more engine detection and engine version
      detection (andrewmoise)

1.77 2015-03-08 12:06:17 America/Toronto
    - Switch to using strings for version numbers (andrewmoise)
    - Adds BrowseX and Silk detection (andrewmoise)
    - Makes detection of Obigo more consistent (andrewmoise)

1.76 2015-03-03 22:56:25 America/Toronto
    - Encourage use of public_* and engine_* over version(), major() and
      minor().
    - Speed optimizations (andrewmoise)
    - Fix warnings on "Safari/12x.x (andrewmoise)

1.75 2014-08-27 17:55:01 America/Toronto
    - Adds detection for Chrome OS (Douglas Christopher Wilson)

1.74 2014-08-27 10:32:16 America/Toronto
    -  Adds detection for Majestic-12 bot (Douglas Christopher Wilson)

1.73 2014-08-15 23:50:42 America/Toronto
    - Adds minimum Perl version
    - dzil tweaks to make CPANTS happier

1.72 2014-06-18 23:34:27 America/Toronto
    - Remove File::Slurp from tests in favour of Path::Tiny

1.71 2014-05-19 22:38:52 America/Toronto
    - Fixes warnings on "frakenagent" (Douglas Christopher Wilson)

1.70 2014-03-27 12:16:12 America/Toronto
    - Add new UA tests & avoid false positive Sun match on Samsung (Jon Jensen)
